# GRCInsight

./: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README-Lambda-Deployment.md  README.md  docker-compose.yml  dynamodb-table.json  go.mod  go.sum  index.html  index.md  lambda-permissions-policy.json  main.py  report-styles.css  requirements.txt
.github/workflows/: ci.yml  deploy-lambda.yml  deploy-site.yml  generate-grc-report.yml  lambda-report-generation.yml
agent/: Dockerfile  Dockerfile.lambda  lambda_main.py  main.py  pyproject.toml  requirements.txt
agent/api/routes/: analysis.py  health.py  rss.py  workflow.py
agent/config/: settings.py
agent/core/: analyze.py  entities.py  workflow.py
agent/models/: api.py
agent/services/: anthropic_client.py  model_service.py  openai_client.py  opencode_client.py  openrouter_client.py  rss_service.py
agent/tests/: test_model_defaults.py  test_opencode_client.py  test_report_workflow_contract.py  test_repository_structure.py  test_routes.py  test_workflow_fallback.py
cmd/lambda/: main.go
cmd/server/: main.go
config/: config.json
configs/: config.production.yaml  config.yaml
deployments/: dynamodb-policy.json  grcinsight-iam-policy.json
docs/: DEVELOPER.md  README-Lambda-Deployment.md
docs/reports/: index.md
docs/templates/: grc_report.md
internal/config/: config.go
legacy/: README.md  main.py
scripts/: check_site_renderer.py  check_site_report.py  deploy-lambda.sh  validate-prod.sh
site/: README.md  index.html  index.md  sitemap.xml
site/static/: app.js  (+6 more)
web/: .keep
(+50 files in other folders)
