[project]
name = "grcinsight-agent"
version = "0.1.0"
description = "Python agent service for GRCInsight report generation"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3==1.34.153",
    "fastapi==0.104.1",
    "feedparser==6.0.10",
    "httpx==0.25.2",
    "langchain==0.3.27",
    "loguru==0.7.2",
    "mangum==0.17.0",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.0.0",
    "uvicorn==0.24.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest==8.3.3",
    "ruff==0.6.9",
    "ty>=0.0.1a1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["*.py", "api", "config", "core", "models", "services", "tests"]
